# enoch-agentic-research-system

./: .gitignore  NOTICE  README.md  SECURITY.md  config.example.json  pyproject.toml
deploy/: emit_omx_event.sh  enoch-notion-sync.service  enoch-notion-sync.timer  enoch-paper-draft-next.service  enoch-paper-draft-next.timer  enoch-queue-alert-check.service  enoch-queue-alert-check.timer  enoch_notion_sync.sh  enoch_omx_dispatch.sh  enoch_omx_runner.sh  enoch_paper_draft_next.sh  enoch_queue_alert_check.py  omx-wake-gate.json.example  omx-wake-gate.service  wait_safe_restart_wake_gate.py
docs/: configuration-reference.md  deployment-guide.md  end-to-end-workflow-audit.md  featured-paper-selection.md  idea-intake-workflow.md  launch-checklist.md  launch-todo.md  quickstart.md  repo-protection-plan.md  system-workflow.md
omx_wake_gate/: __init__.py  app.py  callbacks.py  config.py  gate.py  models.py  process_tracker.py  state_store.py  telemetry.py
paper_templates/: arxiv_latex_prompt.md  arxiv_markdown_prompt.md  claim_ledger_prompt.md  publication_polish_prompt.md
scripts/: apply-github-protections.sh  install-control-plane.sh  install-worker.sh  smoke-test-local.sh
site/: README.md  highlights.json  index.html  site.js  styles.css
tests/: test_control_plane_router.py  test_control_plane_store.py  test_dashboard_truth.py  test_deploy_units.py  test_dispatch_endpoint.py  test_enoch_core_logic.py  test_enoch_core_router.py  test_enoch_core_store.py  test_notion_sync.py  test_paper_artifacts.py  test_paper_writer.py  test_queue_pump.py  test_uma_telemetry.py  (+3 more)
(+25 files in other folders)
