[project]
name = "omx-wake-gate"
version = "0.1.0"
description = "LangGraph-era agentic research control plane and wake-gate reliability system"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "langgraph>=1.1.10",
  "psutil>=7.0.0,<8.0.0",
  "pydantic>=2.11.0,<3.0.0",
  "pynvml>=12.0.0,<13.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["omx_wake_gate*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
